# ros_autonomous_robot

./: CMakeLists.txt  ConfigFile.yaml  LICENSE  README.md  README.me  package.xml
applications/: CMakeLists.txt  README.md  README.me  autonomous_robot.cpp  bag_loader.cpp  goal.cpp  keyboard_input.cpp  listening_keyboard.cpp  marker_finder_saver.cpp  marker_goal.cpp  motion_estimator_ros.cpp  random_goals.cpp  teste.cpp
cmake/: Findaruco.cmake
common/: CMakeLists.txt  common_types.h  config_loader.cpp  config_loader.h  geometry.cpp
config_files/: ConfigFile.yaml
helpers/: CMakeLists.txt  goal.cpp  goal.h  handleFiles.cpp  handleFiles.h  structures.h
helpers/action/: Goal.action
motion_estimation/: motion_estimator_ransac.cpp
slam/: marker_finder.cpp  marker_finder.h
src/: CMakeLists.txt  README.md  autonomous_robot.cpp  marker_finder_saver.cpp  motion_estimator_ros.cpp  random_goals.cpp  teste
testes/office/: marker_saved1  office_complete.pgm  office_complete.yaml  teste1_gmapping.pgm  teste1_gmapping.yaml  teste2_gmapping.pgm  teste2_gmapping.yaml
tracking/: klt_tracker.cpp
visualization/: reconstruction_visualizer.cpp
